force-app/main/default/objects/SEBCaseTeam__c/SEBCaseTeam__c.object-meta.xml
<CustomObject>
    <description>PacPoint-IC102418 - Created for BREG phase 1</description>
    <label>SEB Case Team</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SEB Case Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>