force-app/main/default/objects/SEBCaseTeam__c/fields/ApplyValidationRule__c.field-meta.xml
<CustomField>
    <fullName>ApplyValidationRule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV081919 - Created for BREG phase 1. Created to be able to have validation rules on the Name field after it has been populated by the PB</description>
    <label>Apply Validation Rule</label>
    <type>Checkbox</type>
</CustomField>