force-app/main/default/objects/SEBCaseTeam__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>PacPoint-IC102418 - Created for BREG phase 1</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Clerk</fullName>
            </value>
            <value>
                <fullName>Financial Analyst</fullName>
            </value>
            <value>
                <fullName>Investigator</fullName>
            </value>
            <value>
                <fullName>Legal Assistant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>