force-app/main/default/objects/SEBCaseTeam__c/fields/SEBCase__c.field-meta.xml
<CustomField>
    <fullName>SEBCase__c</fullName>
    <description>PacPoint-IC102418 - Created for BREG phase 1</description>
    <label>SEB Case</label>
    <referenceTo>SEBCase__c</referenceTo>
    <relationshipLabel>SEB Case Teams</relationshipLabel>
    <relationshipName>SEBCaseTeams</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>