force-app/main/default/objects/SEBCaseTeam__c/fields/SEBCaseId__c.field-meta.xml
<CustomField>
    <fullName>SEBCaseId__c</fullName>
    <description>PacPoint-JB110118 - Created for BREG phase 1: Used in Email Template</description>
    <formula>SEBCase__r.Id</formula>
    <label>SEB Case Id</label>
    <type>Text</type>
</CustomField>