force-app/main/default/objects/SEBCaseTeam__c/fields/SEBCaseName__c.field-meta.xml
<CustomField>
    <fullName>SEBCaseName__c</fullName>
    <description>PacPoint-JB110118 - Created for BREG phase 1: Used in Email Template</description>
    <formula>SEBCase__r.Name</formula>
    <label>SEB Case Name</label>
    <type>Text</type>
</CustomField>