force-app/main/default/objects/SEBCaseTeam__c/fields/TeamMember__c.field-meta.xml
<CustomField>
    <fullName>TeamMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-IC102418 - Created for BREG phase 1</description>
    <label>Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SEBCaseTeams</relationshipName>
    <type>Lookup</type>
</CustomField>