force-app/main/default/objects/SEBCaseTeam__c/fields/TeamMemberEmail__c.field-meta.xml
<CustomField>
    <fullName>TeamMemberEmail__c</fullName>
    <description>PacPoint-IC102418 - Created for BREG phase 1</description>
    <formula>TeamMember__r.Email</formula>
    <label>Team Member Email</label>
    <type>Text</type>
</CustomField>