force-app/main/default/objects/SEBCaseTeam__c/fields/TeamMemberName__c.field-meta.xml
<CustomField>
    <fullName>TeamMemberName__c</fullName>
    <description>PacPoint-IC102418 - Created for BREG phase 1</description>
    <formula>TeamMember__r.FirstName &amp; &apos; &apos; &amp;  TeamMember__r.LastName</formula>
    <label>Team Member Name</label>
    <type>Text</type>
</CustomField>