force-app/main/default/objects/SEBCaseTeam__c/fields/TeamMemberPhone__c.field-meta.xml
<CustomField>
    <fullName>TeamMemberPhone__c</fullName>
    <description>PacPoint-IC102418 - Created for BREG phase 1</description>
    <formula>TeamMember__r.Phone</formula>
    <label>Team Member Phone</label>
    <type>Text</type>
</CustomField>