force-app/main/default/objects/SEBCaseTeam__c/validationRules/LockDownNameAndTeamMember.validationRule-meta.xml
<ValidationRule>
    <fullName>LockDownNameAndTeamMember</fullName>
    <active>true</active>
    <description>PacPoint-MV081919 - Created for BREG phase 1</description>
    <errorConditionFormula>IF(
 AND(
  ApplyValidationRule__c, 
  OR(
   ISCHANGED(Name),
   ISCHANGED(TeamMember__c)
  ),
 
   $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
   $Profile.Name &lt;&gt; &quot;DCCA SEC/SEB System Administrator&quot;
  
),
true, 
false
)</errorConditionFormula>
    <errorMessage>Team Member and Name fields cannot be updated</errorMessage>
</ValidationRule>