force-app/main/default/objects/SEBCaseTeam__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SEBCase__c</columns>
    <columns>TeamMember__c</columns>
    <columns>Role__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>