force-app/main/default/objects/SEBCaseTeam__c/listViews/SEB_Case_Teams_Clerks.listView-meta.xml
<ListView>
    <fullName>SEB_Case_Teams_Clerks</fullName>
    <columns>SEBCase__c</columns>
    <columns>TeamMember__c</columns>
    <columns>Role__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Role__c</field>
        <operation>equals</operation>
        <value>Clerk</value>
    </filters>
    <label>SEB Case Teams - Clerks</label>
    <sharedTo>
        <group>SEB_Supervisors</group>
    </sharedTo>
</ListView>